fix: 修正 app.run 問題

--- a/render.yaml
+++ b/render.yaml
@@ -2,5 +2,7 @@ services:
   - type: web
     name: agent_site
     env: python
-    buildCommand: ""
-    startCommand: python app.py
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "python app.py"
+    autoDeploy: true
+
