fix: 加入 render.yaml 並修正啟動方式

--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,6 @@ services:
     name: agent_site
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "python app.py"
+    startCommand: "python server.py"
     autoDeploy: true
 
