--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
 services:
-  - type: web
-    name: agent_site
-    env: python
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "python server.py"
-    autoDeploy: true
-
+- type: web
+  name: agent-site
+  env: python
+  rootDir: agent_site      # <— 關鍵：指向子資料夾
+  plan: free
+  buildCommand: pip install -r requirements.txt
+  startCommand: gunicorn server:app --bind 0.0.0.0:$PORT --timeout 120
